pso con filtrado lento